src/lib/quick_parser.leg
# vi:set ts=4 sw=4 expandtab:
#
# Copyright 2016, Chris Leishman (http://github.com/cleishm)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

directive = (client-command | statement)

client-command = - < ':' command-body > -- (';' | line-end)
                                       { segment(false, yy); }
command-body =
    ( escaped-char
    | '\\;'
    | '\\' -- line-end
    | block-comment
    | quoted
    | !(';' | -- line-end) .
    )*

statement = - < statement-body > - ( ';' | EOF )
                                       { segment(true, yy); }
statement-body = (comment | quoted | escaped-char | !(- ';') .)*

quoted = single-quoted | double-quoted
single-quoted = "'" (escaped-char | EOL | !"'" .)* "'"
double-quoted = '"' (escaped-char | EOL | !'"' .)* '"'

escaped-char = '\\' [abfnrtv"'?\\]

- = (WS | comment)*
-- = (HWS | block-comment)*
line-end = (line-comment | EOL | EOF)

comment = line-comment | block-comment
line-comment = '//' (!EOL .)* (EOL | EOF)
block-comment = '/*' (EOL | !'*/' .)* '*/'

WS = HWS | EOL
HWS = [ \t]
EOL = ('\n' | '\r\n') _line_start_
EOF = !.                               { yy->eof = true; }

_line_start_ = &{ (line_start(yy), 1) }
